config/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-web-test
spec:
  selector:
    # the selector is pointing to the Dev Env instance
    app: code-server
    user-env-name: norbert
  ports:
    - protocol: TCP
      port: 8080
