config/product-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: product-web
spec:
  rules:
  - host: product.norbert.kubeplatform.ch.innoq.io
    http:
      paths:
      - backend:
          serviceName: product-web-test
          servicePort: 8888
        path: /
  tls:
  - hosts:
    - product.norbert.kubeplatform.ch.innoq.io
    secretName: norbert-product-web-tls
